fix(patch_obligation): Fix patch request bugs in obligation
